--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Я — підліток якому 14 років.</p>
 
         <h3>Про мене (коротко)</h3>
-        <p>Вмію: ... </p>
+        <p>Вмію: ..rrtt. </p>
       </div>
     </div>
 
@@ -48,4 +48,5 @@
     </div>
   </div>
 </body>
+
 </html>
