--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="top-section">
       <div class="left">
         <div class="photo-placeholder" id="photo">
-          <img src="C:\Users\User1\Desktop\photo_2025-12-17_16-42-45.jpg" alt="Моє фото">
+          <img src="photo_2025-12-17_16-42-45.jpg" alt="Моє фото">
         </div>
       </div>
 
@@ -50,3 +50,4 @@
 </body>
 
 </html>
+
