--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Я — підліток якому 14 років.</p>
 
         <h3>Про мене (коротко)</h3>
-        <p>Вмію: ..rrtt. </p>
+        <p>Вмію: ..aassdd. </p>
       </div>
     </div>
 
@@ -43,12 +43,13 @@
       <h3>Мої роботи</h3>
       <ul>
         
-    <li><a href="file:///C:/Users/User1/Desktop/%D0%B4%D1%80%D1%83%D0%B3%D0%B8%D0%B9%20%D0%B2%D0%B8%D0%BF%D1%83%D1%81%D0%BA/%D0%94%D0%BE%D0%B2%D1%96%D0%B4%D0%BD%D0%B8%D0%BA%20%D0%BA%D1%80%D0%B0%D1%97%D0%BD.html" target="_blank">Довідник країн</a></li>
+    <li><a href="tvoy.html" target="_blank">Довідник країн</a></li>
       </ul>
     </div>
   </div>
 </body>
 
 </html>
+
 
 
