--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <p>Я — підліток якому 14 років.</p>
 
         <h3>Про мене (коротко)</h3>
-        <p>Вмію: ..aassdd. </p>
+        <p>Живу у Львівській області, місто Пустомити.
+        У школі я вже у 8 класі, також я навчаюсь у музичній школі
+        там я вже 7 клас.</p>
       </div>
     </div>
 
@@ -130,6 +132,7 @@
   </div>
 </body>
 </html>
+
 
 
 
