--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Про мене — просте</title>
+  <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/9/94/%D0%97%D1%96%D1%80%D0%BA%D0%B0_-_Star.png">
   <style>
     body{font-family:Inter,Arial,Helvetica,sans-serif;background:#f6f9fc;color:#0b1220;margin:0;padding:24px}
     .card{max-width:900px;margin:20px auto;background:#fff;border-radius:10px;box-shadow:0 6px 20px rgba(12,18,30,0.06);padding:20px}
@@ -132,6 +133,7 @@
   </div>
 </body>
 </html>
+
 
 
 
