--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
         <li><a href="Спам.html" target="_blank">Визначення спаму</a></li>
         <li><a href="Таблиця.html" target="_blank">Таблиця множення</a></li>
         <li><a href="Факторіал.html" target="_blank">Факторіал</a></li>
+        <li><a href="Банкомат.html" target="_blank">Банкомат</a></li>
+        <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
+        <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
+        <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
+        <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
         <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
       </ul>
     </div>
@@ -140,6 +145,7 @@
 
 </body>
 </html>
+
 
 
 
