--- a/index.html
+++ b/index.html
@@ -135,16 +135,17 @@
         <li><a href="Факторіал.html" target="_blank">Факторіал</a></li>
         <li><a href="Банкомат.html" target="_blank">Банкомат</a></li>
         <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
-        <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
-        <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
-        <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
-        <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
+        <li><a href="Перевірка віку.html" target="_blank">Перевірка віку</a></li>
+        <li><a href="Спроби вгадування.html" target="_blank">Спроби вгадування</a></li>
+        <li><a href="Порі року.html" target="_blank">Пори року</a></li>
+        <li><a href="Сума трьо чисел.html" target="_blank">Сума трьох чисел</a></li>
       </ul>
     </div>
   </div>
 
 </body>
 </html>
+
 
 
 
