--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
         <h3>Про мене (коротко)</h3>
         <p>
           Живу у Львівській області, місто Пустомити.
-          У школі я вже у 8 класі, також я навчаюсь у музичній школі — там я вже 7 клас.
+          У школі я вже у 8 класі, також я навчаюсь у музичній школі — там я вже 7 клас. 
+          Також цікавлюся видами спорту: футбол, волейбол. Люблю гуляти з друзями та подоружувати.
+          Нещодавно я почав цікавитися програмуванням і вивчив вже веб-дизайн та базові знання Java Script 
+          (20.12.2025)
         </p>
       </div>
     </div>
@@ -145,6 +148,7 @@
 
 </body>
 </html>
+
 
 
 
