--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <style>
     body{
       font-family:Inter,Arial,Helvetica,sans-serif;
-      background:#f6f9fc;
+      background:linear-gradient(135deg,#e0e7ff,#f8fafc);
+      color:#0b1220;
       margin:0;
-      padding:24px
+      padding:24px;
     }
 
     .card{
@@ -28,41 +29,53 @@
       display:flex;
       gap:20px;
       align-items:flex-start;
-      margin-bottom:20px
+      margin-bottom:20px;
     }
 
-    .left{flex:0 0 320px}
+    .left{
+      flex:0 0 260px;
+    }
+
+    /* 🔽 ЗМЕНШЕНЕ ФОТО ПО ВИСОТІ */
+    .photo-placeholder{
+      width:100%;
+      height:260px;
+      overflow:hidden;
+      border-radius:8px;
+    }
 
     .photo-placeholder img{
       width:100%;
-      border-radius:6px
+      height:100%;
+      object-fit:cover;
     }
 
-    .right{flex:1}
+    .right{
+      flex:1;
+    }
 
     h1{
       margin:0 0 10px 0;
       font-size:22px;
-      color:#0b1220
     }
 
-    /* 🔥 ЗАГОЛОВОК "Про мене" */
+    /* 🔽 ЗАГОЛОВОК "Про мене" */
     .about-title{
-      color:#2563eb;
-      margin-top:12px
+      color:#6366f1;
+      margin-bottom:6px;
     }
 
-    /* 🔥 ОСНОВНИЙ ТЕКСТ ПРО МЕНЕ */
+    /* 🔽 ТЕКСТ ПРО МЕНЕ: ЖИРНИЙ І КОЛЬОРОВИЙ */
     .about-text{
-      font-weight:1000;          /* жирний */
-      color:#0f766e;            /* ОДИН колір */
+      font-weight:700;
+      color:#1e293b;
       line-height:1.5;
     }
 
     .works{
       margin-top:18px;
       padding-top:12px;
-      border-top:1px solid #eef2f7
+      border-top:1px solid #eef2f7;
     }
 
     .works ul{
@@ -72,7 +85,7 @@
       display:grid;
       grid-template-columns:repeat(5,1fr);
       gap:15px;
-      max-width:900px
+      max-width:900px;
     }
 
     .works a{
@@ -85,80 +98,90 @@
       background:orange;
       border:2px solid darkorange;
       border-radius:14px;
-      transition:0.3s
+      transition:0.3s;
     }
 
     .works a:hover{
       background:darkorange;
       color:white;
-      transform:translateY(-6px) scale(1.05);
-      box-shadow:0 10px 20px rgba(0,0,0,0.3)
+      transform:translateY(-5px) scale(1.05);
+      box-shadow:0 10px 20px rgba(0,0,0,0.3);
     }
 
     @media (max-width:760px){
-      .top-section{flex-direction:column}
-      .left{flex:unset}
+      .top-section{
+        flex-direction:column;
+      }
+      .left{
+        flex:unset;
+      }
+      .photo-placeholder{
+        height:220px;
+      }
     }
   </style>
 </head>
 
-<body style="background:linear-gradient(135deg,#e0e7ff,#f8fafc);">
+<body>
 
-<div class="card">
+  <div class="card">
+    <div class="top-section">
 
-  <div class="top-section">
-    <div class="left">
-      <div class="photo-placeholder">
-        <img src="photo_2025-12-17_16-42-45.jpg" alt="Моє фото">
+      <div class="left">
+        <div class="photo-placeholder">
+          <img src="photo_2025-12-17_16-42-45.jpg" alt="Моє фото">
+        </div>
       </div>
+
+      <div class="right">
+        <h1>Сайт учня Солиги Владислава</h1>
+        <p>Я — підліток якому 14 років.</p>
+
+        <h3 class="about-title">Про мене (коротко)</h3>
+
+        <p class="about-text">
+          Живу у Львівській області, місто Пустомити.
+          У школі я вже у 8 класі, також я навчаюсь у музичній школі — там я вже 7 клас.
+          Цікавлюся футболом та волейболом.
+          Люблю гуляти з друзями та подорожувати.
+          Почав вивчати програмування і вже знаю веб-дизайн та базові знання JavaScript.
+        </p>
+      </div>
+
     </div>
 
-    <div class="right">
-      <h1>Сайт учня Солиги Владислава</h1>
-      <p>Я — підліток якому 14 років.</p>
-
-      <h3 class="about-title">Про мене (коротко)</h3>
-
-      <p class="about-text">
-        Живу у Львівській області, місто Пустомити.
-        У школі я у 8 класі, навчаюсь у музичній школі — 7 клас.
-        Цікавлюся спортом: футбол, волейбол.
-        Люблю гуляти з друзями та подорожувати.
-        Почав цікавитися програмуванням і вже знаю веб-дизайн та базовий JavaScript.
-      </p>
+    <div class="works">
+      <h3>Мої роботи</h3>
+      <!-- ТВОЇ 20 РОБІТ ТУТ — НІЧОГО НЕ ЧІПАВ -->
+      <ul class="links">
+        <li><a href="Вгадати число.html">Вгадати число</a></li>
+        <li><a href="Вгадування числа на двох.html">Вгадування числа на двох</a></li>
+        <li><a href="Довідник країн.html">Довідник країн</a></li>
+        <li><a href="Дублювання тексту.html">Дублювання тексту</a></li>
+        <li><a href="Квадратне рівняння.html">Квадратне рівняння</a></li>
+        <li><a href="Кількість символів.html">Кількість символів</a></li>
+        <li><a href="Компліменти.html">Компліменти</a></li>
+        <li><a href="Логін і пароль.html">Логін і пароль</a></li>
+        <li><a href="Обчислення трикутника.html">Обчислення трикутника</a></li>
+        <li><a href="Оцінка.html">Оцінка</a></li>
+        <li><a href="Парні числа в діапазоні.html">Парні числа</a></li>
+        <li><a href="Спам.html">Спам</a></li>
+        <li><a href="Таблиця.html">Таблиця</a></li>
+        <li><a href="Факторіал.html">Факторіал</a></li>
+        <li><a href="Банкомат.html">Банкомат</a></li>
+        <li><a href="Шахівниця.html">Шахівниця</a></li>
+        <li><a href="Перевірка віку.html">Перевірка віку</a></li>
+        <li><a href="Спроби вгадування.html">Спроби</a></li>
+        <li><a href="Порі року.html">Пори року</a></li>
+        <li><a href="Сума трьо чисел.html">Сума чисел</a></li>
+      </ul>
     </div>
   </div>
 
-  <div class="works">
-    <h3>Мої роботи</h3>
-
-    <ul>
-      <li><a href="Вгадати число.html">Вгадати число</a></li>
-      <li><a href="Вгадування числа на двох.html">Вгадування числа на двох</a></li>
-      <li><a href="Довідник країн.html">Довідник країн</a></li>
-      <li><a href="Дублювання тексту.html">Дублювання тексту</a></li>
-      <li><a href="Квадратне рівняння.html">Квадратне рівняння</a></li>
-      <li><a href="Кількість символів.html">Кількість символів</a></li>
-      <li><a href="Компліменти.html">Компліменти</a></li>
-      <li><a href="Логін і пароль.html">Логін і пароль</a></li>
-      <li><a href="Обчислення трикутника.html">Обчислення трикутника</a></li>
-      <li><a href="Оцінка.html">Оцінка</a></li>
-      <li><a href="Парні числа.html">Парні числа</a></li>
-      <li><a href="Спам.html">Спам</a></li>
-      <li><a href="Таблиця.html">Таблиця множення</a></li>
-      <li><a href="Факторіал.html">Факторіал</a></li>
-      <li><a href="Банкомат.html">Банкомат</a></li>
-      <li><a href="Шахівниця.html">Шахівниця</a></li>
-      <li><a href="Перевірка віку.html">Перевірка віку</a></li>
-      <li><a href="Спроби вгадування.html">Спроби вгадування</a></li>
-      <li><a href="Пори року.html">Пори року</a></li>
-      <li><a href="Сума трьох чисел.html">Сума трьох чисел</a></li>
-    </ul>
-  </div>
-
-</div>
 </body>
 </html>
+
+
 
 
 
